--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-bootstrap": "^1.6.1",
     "react-dom": "^18.2.0",
     "react-scripts": "4.0.3",
-    "three": "0.104.0",
+    "three": "^0.154.0",
+    "three-obj-loader": "^1.1.3",
     "three-orbit-controls": "^82.1.0",
     "web-vitals": "^1.1.2"
   },
